Updating blog description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "All about Java, OSGi, Spring Roo and other technologies"
+description: "All about Spring Roo, gvNIX, OSGi and other technologies"
 ---
 
 {% for post in paginator.posts %}
