Updating about section

--- a/about.html
+++ b/about.html
@@ -5,8 +5,16 @@ description: "This is what I do."
 header-img: "img/about_bg.JPG"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+<p>Hello and thanks for visit my blog! My name is Juan Carlos García, I'm 23 years old and I'm from Torrent, Valencia (Spain).</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+<p>Since I was a child, I've been passionate about computers and everything that surrounds them. When I was 14, I started to develop basic desktop applications using VB6 and basic web applications using PHP.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+<p>I studied Application Development at "Florida Universitaria" (Valencia, Spain). I worked at <a href="http://impartx.com/">ImpartX Ltd.</a> in Dublin (Ireland) with .NET technology and C #. Then I worked at <a href="http://www.axisdata.net/">Axis Data</a> in Palma de Mallorca (Spain) using Javascript technology.</p>
+
+<p>Currently, I am Software Architect at <a href="http://www.disid.com">DiSiD Corporation, S.L</a> (Valencia, Spain), working on <a href="http://projects.spring.io/spring-roo">Spring Roo</a> project and <a href="http://www.gvnix.org">gvNIX</a> project using Java and Spring technology.</p>
+
+<p>If you want to know something more about me and projects where I've worked, visit my <a href="https://es.linkedin.com/in/jcagarciadelcanto">Linkedin</a> profile</p>
+
+<br/>
+
+<img src="img/about_bg.JPG"></img>
