Updating about background image

--- a/about.html
+++ b/about.html
@@ -2,10 +2,8 @@
 layout: page
 title: "About"
 description: "This is what I do."
-header-img: "img/about_bg.JPG"
+header-img: "img/me.JPG"
 ---
-
-<img src="../img/me.JPG"></img>
 
 <p>Hello and thanks for visit my blog! My name is Juan Carlos García, I'm 23 years old and I'm from Torrent, Valencia (Spain).</p>
 
