Updating about background image

--- a/about.html
+++ b/about.html
@@ -5,11 +5,13 @@ description: "This is what I do."
 header-img: "img/me.JPG"
 ---
 
-<p>Hello and thanks for visit my blog! My name is Juan Carlos García, I'm 23 years old and I'm from Torrent, Valencia (Spain).</p>
+<p>Hello and thanks for visit my blog!</p>
+
+<p>My name is Juan Carlos García, I'm 23 years old and I'm from Torrent, Valencia (Spain).</p>
 
 <p>Since I was a child, I've been passionate about computers and everything that surrounds them. When I was 14, I started to develop basic desktop applications using VB6 and basic web applications using PHP.</p>
 
-<p>I studied Application Development at "Florida Universitaria" (Valencia, Spain). I've been workin in Dublin (Ireland) with .NET and C# and in Palma de Mallorca (Spain) using Javascript technologies.</p>
+<p>I studied Application Development at "Florida Universitaria" (Valencia, Spain). I've been working in Dublin (Ireland) with .NET and C# and in Palma de Mallorca (Spain) using Javascript technologies.</p>
 
 <p>Currently, I am Software Architect at <a href="http://www.disid.com">DISID Corporation, S.L</a> (Valencia, Spain), working on <a href="http://projects.spring.io/spring-roo">Spring Roo</a> project and <a href="http://www.gvnix.org">gvNIX</a> project using Java and Spring technologies.</p>
 
